[gd_scene load_steps=15 format=3 uid="uid://di43h2b1phwgx"]

[ext_resource type="PackedScene" uid="uid://jg20aef2fpib" path="res://misc/Player.tscn" id="1_8pj75"]
[ext_resource type="Texture2D" uid="uid://deqtl1mn6wcvc" path="res://sprites/wall.png" id="2_j8tn8"]
[ext_resource type="PackedScene" uid="uid://dvlfgoagr1ojq" path="res://misc/horizontal_barrier.tscn" id="3_ny7yq"]
[ext_resource type="PackedScene" uid="uid://cd16ap2lovc83" path="res://misc/vertical_barrier.tscn" id="4_rqjef"]
[ext_resource type="AudioStream" uid="uid://bsjt6eh77rx4b" path="res://sounds/Portal-2-OST-Volume-2-Halls-Of-Science-4.mp3" id="5_inlrr"]
[ext_resource type="PackedScene" uid="uid://btcwsaquo11g7" path="res://misc/door.tscn" id="6_armu2"]
[ext_resource type="Script" path="res://scripts/chellplacer.gd" id="6_uwpnt"]
[ext_resource type="PackedScene" uid="uid://b5rirxeymhkom" path="res://misc/block.tscn" id="7_w3752"]
[ext_resource type="Texture2D" uid="uid://cx5uhuyetojxj" path="res://sprites/logo_transparent.png" id="8_3ie35"]
[ext_resource type="Script" path="res://scripts/portal_logic.gd" id="9_oef8l"]
[ext_resource type="PackedScene" uid="uid://6180x1ut1c5g" path="res://misc/portal.tscn" id="10_y0xav"]
[ext_resource type="Texture2D" uid="uid://7ii2ch1sfwok" path="res://sprites/blue_portal.png" id="11_amwtv"]
[ext_resource type="Texture2D" uid="uid://bccb3lmtkyn86" path="res://sprites/orange_portal.png" id="12_koo8f"]
[ext_resource type="Texture2D" uid="uid://dihubvwhduia4" path="res://sprites/ana.png" id="16_vb8hq"]

[node name="root" type="Node2D"]
script = ExtResource("6_uwpnt")

[node name="Player" parent="." instance=ExtResource("1_8pj75")]
position = Vector2(608, 632)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(-715.294, -743.529)
scale = Vector2(1.17647, 1.17647)
stream = ExtResource("5_inlrr")
autoplay = true

[node name="PortalControl" type="Node2D" parent="."]
script = ExtResource("9_oef8l")

[node name="Test" parent="PortalControl" instance=ExtResource("10_y0xav")]
position = Vector2(-64, 0)

[node name="Orange" parent="PortalControl" instance=ExtResource("10_y0xav")]
visible = false
position = Vector2(-184, 0)

[node name="Sprite2D" type="Sprite2D" parent="PortalControl/Orange"]
texture = ExtResource("12_koo8f")

[node name="Blue" parent="PortalControl" instance=ExtResource("10_y0xav")]
visible = false
position = Vector2(-128, 0)

[node name="Sprite2D" type="Sprite2D" parent="PortalControl/Blue"]
texture = ExtResource("11_amwtv")

[node name="Design" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
pivot_offset = Vector2(348, 573)

[node name="Floor" parent="Design" instance=ExtResource("3_ny7yq")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 672.0
offset_bottom = 720.0
grow_vertical = 1

[node name="Roof" parent="Design" instance=ExtResource("3_ny7yq")]
layout_mode = 1

[node name="Wall-Left" parent="Design" instance=ExtResource("4_rqjef")]
layout_mode = 1
offset_left = 1232.0
offset_top = -672.0
offset_right = 1280.0
offset_bottom = -48.0

[node name="Wall-Right" parent="Design" instance=ExtResource("4_rqjef")]
layout_mode = 1
offset_top = -672.0
offset_bottom = -48.0

[node name="Background" type="Sprite2D" parent="Design"]
texture = ExtResource("2_j8tn8")
centered = false

[node name="ApertureShopLogo" type="Sprite2D" parent="Design"]
position = Vector2(184, 104)
texture = ExtResource("8_3ie35")

[node name="EasterEggAna" type="Sprite2D" parent="Design"]
position = Vector2(616, 812)
texture = ExtResource("16_vb8hq")

[node name="Label" type="Label" parent="Design/EasterEggAna"]
offset_left = -180.0
offset_top = 61.0
offset_right = 145.0
offset_bottom = 87.0
text = "In f√ºnf Tagen schreibe ich Ana btw ~ Afeef"

[node name="ExitDoor" parent="." instance=ExtResource("6_armu2")]
position = Vector2(1137, 608)
placer_enabled = true
place = 3
path = "res://level/Exit.tscn"

[node name="Label" type="Label" parent="ExitDoor"]
modulate = Color(0, 0, 0, 1)
offset_left = -40.0
offset_top = -88.0
offset_right = 38.0
offset_bottom = -62.0
text = "EXIT
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopDoor" parent="." instance=ExtResource("6_armu2")]
position = Vector2(1164, 250)
placer_enabled = true
place = 3
path = "res://level/Hub.tscn"

[node name="Label" type="Label" parent="ShopDoor"]
modulate = Color(0, 0, 0, 1)
offset_left = -40.0
offset_top = -88.0
offset_right = 38.0
offset_bottom = -62.0
text = "SHOP
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaticBody2D" parent="ShopDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(43, 88)

[node name="StaticBody2D2" parent="ShopDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(-5, 88)

[node name="StaticBody2D3" parent="ShopDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(-53, 88)

[node name="StaticBody2D4" parent="ShopDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(-101, 88)

[node name="StaticBody2D5" parent="ShopDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(-149, 88)

[node name="MiniGameDoor" parent="." groups=["PortalForbidden"] instance=ExtResource("6_armu2")]
position = Vector2(584, 136)
placer_enabled = true
place = 2
path = "res://level/Minigame.tscn"

[node name="Label" type="Label" parent="MiniGameDoor"]
modulate = Color(0, 0, 0, 1)
offset_left = -40.0
offset_top = -88.0
offset_right = 37.0
offset_bottom = -62.0
text = "MINIGAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaticBody2D" parent="MiniGameDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(72, 88)

[node name="StaticBody2D2" parent="MiniGameDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(24, 88)

[node name="StaticBody2D3" parent="MiniGameDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(-24, 88)

[node name="StaticBody2D4" parent="MiniGameDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(120, 88)

[node name="InventoryDoor" parent="." groups=["PortalForbidden"] instance=ExtResource("6_armu2")]
position = Vector2(112, 408)
placer_enabled = true
place = 1
path = "res://level/Inventory.tscn"

[node name="Label" type="Label" parent="InventoryDoor"]
modulate = Color(0, 0, 0, 1)
offset_left = -56.0
offset_top = -88.0
offset_right = 61.0
offset_bottom = -62.0
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaticBody2D" parent="InventoryDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(152, 88)

[node name="StaticBody2D2" parent="InventoryDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(104, 88)

[node name="StaticBody2D3" parent="InventoryDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(56, 88)

[node name="StaticBody2D4" parent="InventoryDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(8, 88)

[node name="StaticBody2D5" parent="InventoryDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(-40, 88)

[node name="StaticBody2D6" parent="InventoryDoor" groups=["PortalForbidden"] instance=ExtResource("7_w3752")]
position = Vector2(200, 88)

[connection signal="body_entered" from="PortalControl/Orange" to="PortalControl" method="_on_orange_body_entered"]
[connection signal="body_exited" from="PortalControl/Orange" to="PortalControl" method="_on_orange_body_exited"]
[connection signal="body_entered" from="PortalControl/Blue" to="PortalControl" method="_on_blue_body_entered"]
[connection signal="body_exited" from="PortalControl/Blue" to="PortalControl" method="_on_blue_body_exited"]
[connection signal="body_entered" from="ExitDoor" to="ExitDoor" method="_on_body_entered"]
[connection signal="body_exited" from="ExitDoor" to="ExitDoor" method="_on_body_exited"]
[connection signal="body_entered" from="ShopDoor" to="ShopDoor" method="_on_body_entered"]
[connection signal="body_exited" from="ShopDoor" to="ShopDoor" method="_on_body_exited"]
[connection signal="body_entered" from="MiniGameDoor" to="MiniGameDoor" method="_on_body_entered"]
[connection signal="body_exited" from="MiniGameDoor" to="MiniGameDoor" method="_on_body_exited"]
[connection signal="body_entered" from="InventoryDoor" to="InventoryDoor" method="_on_body_entered"]
[connection signal="body_exited" from="InventoryDoor" to="InventoryDoor" method="_on_body_exited"]
